<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- titles -->
    <string name="app_name">Matrix Console</string>
    <string name="title_activity_home">Matrix Home</string>
    <string name="title_activity_room">Matrix Room</string>
    <string name="title_activity_public_rooms">Public Rooms</string>
    <string name="title_activity_room_info">Room info</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_member_details">Member Details</string>
    <string name="title_activity_invite_user">Invite Users</string>

    <!-- button names -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="stay">Stay</string>
    <string name="leave">Leave</string>
    <string name="send">Send</string>
    <string name="resend">Resend</string>
    <string name="redact">Redact</string>
    <string name="message_details">Message details</string>
    <string name="view">View</string>
    <string name="set_power_level">Power level</string>
    <string name="chat">Chat</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="more">More</string>
    <string name="chat_with">Chat with </string>
    <string name="delete">Delete</string>

    <!-- actions -->
    <string name="action_settings">Settings</string>
    <string name="action_members">Members list</string>
    <string name="action_public_rooms">Public Rooms</string>
    <string name="action_my_rooms">My Rooms</string>
    <string name="action_leave">Leave Room</string>
    <string name="action_delete">Delete Room</string>
    <string name="action_invite">Invite</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="action_logout">Logout</string>
    <string name="send_bug_report">Send bug report</string>
    <string name="action_create_room">Create...</string>
    <string name="action_room_info">Room info</string>
    <string name="action_search_room">Search room</string>
    <string name="action_search_contact">Search contact</string>
    <string name="action_mark_all_as_read">Mark all as read</string>
    <string name="action_quick_reply">Quick reply</string>
    <string name="action_open">Open</string>
    <string name="action_close">Close</string>
    <string name="action_invite_by_name">Invite from identifier</string>
    <string name="action_invite_by_list">Invite from other rooms</string>


    <string name="my_rooms">My rooms</string>
    <string name="create_room">Create room</string>
    <string name="join_room">Join room</string>
    <string name="create">Create:</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="matrix_login">Matrix Login</string>
    <string name="login">Login</string>
    <string name="create_account">Create account</string>
    <string name="hs_url">Home Server URL</string>

    <string name="create_room_set_alias">Set room alias</string>
    <string name="create_room_alias_hint">room-alias</string>
    <string name="create_room_set_name">Set room name</string>
    <string name="create_room_name_hint">My room</string>
    <string name="join_room_title">Join Room</string>
    <string name="join_room_hint">(e.g. #foo:example.org)</string>

    <string name="membership_invite">Invited</string>
    <string name="membership_join">Joined</string>
    <string name="membership_leave">Left</string>
    <string name="membership_kick">Kicked</string>
    <string name="membership_ban">Banned</string>

    <string name="notice_room_invite">%1$s invited %2$s to the room.</string>
    <string name="notice_room_join">%1$s joined</string>
    <string name="notice_room_leave">%1$s left</string>
    <string name="notice_room_kick">%1$s kicked %2$s from the room.</string>
    <string name="notice_room_unban">%1$s unbanned %2$s from the room.</string>
    <string name="notice_room_ban">%1$s banned %2$s from the room.</string>
    <string name="notice_avatar_url_changed">%1$s changed their avatar.</string>
    <string name="notice_display_name_changed">%1$s changed their display name to %2$s.</string>
    <string name="notice_topic_changed">%1$s changed the topic to %2$s.</string>
    <string name="notice_room_name_changed">%1$s changed the room name to %2$s.</string>

    <!-- general errors -->
    <string name="network_error">Network error</string>
    <string name="matrix_error">Matrix error</string>
    <string name="unexpected_error">Unexpected error</string>

    <plurals name="num_members">
        <item quantity="one">%1$s user</item>
        <item quantity="other">%1$s users</item>
    </plurals>

    <!-- Last seen time -->
    <string name="last_seen_secs">%ds</string>
    <string name="last_seen_mins">%dm</string>
    <string name="last_seen_hours">%dh</string>
    <string name="last_seen_days">%dd</string>

    <string name="summary_message">%1$s: %2$s</string>
    <string name="summary_invitation">Room Invitation</string>
    <string name="summary_user_invitation">%1$s\'s invitation</string>
    <string name="summary_user_sent_image">%1$s sent an image.</string>


    <string name="invite">Invite</string>
    <string name="kick">Kick</string>
    <string name="ban">Ban</string>
    <string name="unban">Un-ban</string>

    <string name="message_changes_successful">Changes successfully made</string>
    <string name="message_unsaved_changes">There are unsaved changes. Leaving will discard them.</string>
    <string name="message_uploading">Uploading&#8230;</string>
    <string name="message_failed_to_upload">Failed to upload image</string>

    <string name="option_send_files">Send files</string>
    <string name="option_take_photo">Take photo</string>
    <string name="option_attach_video">Attach video</string>

    <!-- Home Screen -->
    <string name="users"> users</string>
    <string name="user"> user</string>

    <!-- Room Screen -->
    <string name="could_not_redact">Could not redact"</string>
    <string name="unable_to_send_message">Unable to send message</string>
    <string name="downloading_dot">Downloading ...</string>
    <string name="downloading">Downloading</string>
    <string name="uploading_dot">Uploading ...</string>

    <!-- Login Screen -->
    <string name="login_error_must_start_http">URL must start with http[s]://</string>
    <string name="login_error_network_error">Unable to login: Network error</string>
    <string name="login_error_unable_login">Unable to login</string>
    <string name="login_error_invalid_credentials">Enter valid credentials</string>
    <string name="login_error_invalid_home_server">Enter valid URL</string>

    <!-- members list Screen -->
    <string name="members_list">Members List</string>

    <!-- invitation members list Screen -->
    <string name="members_one_to_one">One to one room members</string>
    <string name="members_small_room_members">Small room members</string>
    <string name="members_large_room_members">Large room members</string>

    <!-- room creation dialog Screen -->
    <string name="room_creation_room_name">Name</string>
    <string name="room_creation_room_name_hint">(e.g lunchGroup)</string>
    <string name="room_creation_room_alias">Alias</string>
    <string name="room_creation_room_alias_hint">(e.g. #foo:matrix.org)"</string>
    <string name="room_creation_participants">With</string>
    <string name="room_creation_participants_hint">(e.g. @me:hs;...)</string>
    <string name="room_creation_create_room">Create room</string>
    <string name="room_creation_public">Public</string>
    <string name="room_creation_private">Private</string>

    <!-- contacts list screen -->
    <string name="contacts">Contacts</string>
    <string name="invite_this_user_to_use_matrix">Invite this user to use matrix with</string>
    <string name="invitation_message">I\'d like to chat with you with matrix. Please, visit the website http://matrix.org to have more information.</string>

    <!-- Settings screen -->

    <string name="settings_webclient_push">To configure global notification settings (like rules), go find a webclient and hit Settings > Notifications.</string>

    <string name="settings_title_profile">Profile</string>
    <string name="settings_title_config">Configuration</string>
    <string name="settings_title_notifications">Notifications</string>
    <string name="settings_title_rooms">Rooms</string>
    <string name="settings_title_commands">Commands</string>
    <string name="settings_config_console_version">matrixConsole version: %s</string>
    <string name="settings_config_sdk_version">SDK version: %s</string>
    <string name="settings_config_build_number">Build: %s</string>

    <string name="settings_display_all_events">Display all events</string>
    <string name="settings_hide_redactions">Hide redactions</string>
    <string name="settings_hide_unsupported_events">Hide unsupported events</string>
    <string name="settings_sort_by_last_seen">Sort members by last seen time</string>
    <string name="settings_display_left_members">Display left members</string>
    <string name="settings_clear_cache">Clear cache</string>
    <string name="settings_display_public_rooms">Display public rooms with recents</string>

    <string name="settings_config_home_server">Home server: %s</string>
    <string name="settings_config_identity_server">Identity server: %s</string>
    <string name="settings_config_user_id">User ID: %s</string>
    <string name="settings_config_access_token">Access token: %s</string>
    <string name="settings_command_commands">The following commands are available in the room chat:\r\n\r\n /nick &#60;display_name&#62;&#58; change your display name\r\n /me &#60;action&#62;&#58; send the action you are doing. /me will be replaced by your display name\r\n /join &#60;room_alias&#62;&#58; join a room\r\n /kick &#60;user_id&#62; [&#60;reason>]&#58; kick the user\r\n /ban &#60;user_id&#62; [&#60;reason&#62;]&#58; ban the user\r\n /unban &#60;user_id&#62;&#58; unban the user\r\n /op &#60;user_id&#62; &#60;power_level&#62;&#58; set user power level\r\n /deop &#60;user_id&#62;&#58; reset user power level to the room default value</string>
    <string name="settings_failed_to_upload_avatar">Failed to upload avatar</string>

    <!-- Settings keys -->
    <string name="settings_key_display_all_events">settings_key_display_all_events</string>
    <string name="settings_key_hide_redactions">settings_key_hide_redactions</string>
    <string name="settings_key_hide_unsupported_events">settings_key_hide_unsupported_events</string>
    <string name="settings_key_sort_by_last_seen">settings_key_sort_by_last_seen</string>
    <string name="settings_key_display_left_members">settings_key_display_left_members</string>
    <string name="settings_key_display_public_rooms_recents">settings_key_display_public_rooms_recents</string>

    <string name="logo">Logo</string>
    <string name="user_says_body">%1$s says %2$s</string>

</resources>
