<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.matrix.matrixandroidsdk.RoomActivity" >

    <item
        android:id="@+id/action_members"
        android:title="@string/action_members"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_info"
        android:title="@string/action_room_info"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_leave"
        android:title="@string/action_leave"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete"
        android:title="@string/action_delete"
        app:showAsAction="never" />
    <item android:id="@+id/action_send_bug_report"
        android:title="@string/send_bug_report"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
