<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.matrix.matrixandroidsdk.HomeActivity" >

    <item android:id="@+id/action_display_contacts"
        android:title="@string/action_search_contact"
        android:icon="@drawable/ic_menu_allfriends"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_create_room"
          android:title="@string/action_create_room"
          android:icon="@drawable/ic_menu_btn_add"
          app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_create_public_room"
                android:title="@string/create_public_room" />
            <item
                android:id="@+id/action_create_private_room"
                android:title="@string/create_private_room" />

            <item
                android:id="@+id/action_join_room_by_name"
                android:title="@string/join_room" />
        </menu>
    </item>

    <item android:id="@+id/search_room"
        android:title="@string/action_search_room"
        android:icon="@drawable/ic_menu_search"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_mark_all_as_read"
        android:title="@string/action_mark_all_as_read"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_disconnect"
          android:title="@string/action_disconnect"
          android:orderInCategory="100"
          app:showAsAction="never" />
    <item android:id="@+id/action_logout"
          android:title="@string/action_logout"
          android:orderInCategory="100"
          app:showAsAction="never" />
</menu>
